--- a/css/main.css
+++ b/css/main.css
@@ -336,6 +336,11 @@ header {
         -ms-flex-align: center;
             align-items: center;
     margin-left: 0;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.17;
   }
 }
 
@@ -444,6 +449,17 @@ header {
   letter-spacing: 0.06em;
   text-align: center;
   text-transform: uppercase;
+}
+
+@media screen and (min-width: 1200px) {
+  .hero-text {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    max-width: 696px;
+  }
 }
 
 /*BUTTON-LINK*/
@@ -764,6 +780,12 @@ header {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .conteiner-features {
+    width: 1200px;
+  }
+}
+
 .conteiner-features ul {
   margin: 0;
   padding: 0;
@@ -781,10 +803,27 @@ header {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .conteiner-features ul {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .conteiner-features li {
     -ms-flex-preferred-size: calc(((100%-30px) - 4 * 15px) / 2);
         flex-basis: calc(((100%-30px) - 4 * 15px) / 2);
+    margin: 15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .conteiner-features li {
+    -ms-flex-preferred-size: calc(((100%-30px) - 8 * 15px) / 4);
+        flex-basis: calc(((100%-30px) - 8 * 15px) / 4);
     margin: 15px;
   }
 }
@@ -859,13 +898,21 @@ header {
 
 @media screen and (min-width: 480px) {
   .conteiner-team {
-    width: 480px;
+    max-width: 480px;
   }
 }
 
 @media screen and (min-width: 768px) {
   .conteiner-team {
-    width: 768px;
+    max-width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .conteiner-team {
+    max-width: 1200px;
+    padding-top: 94px;
+    padding-bottom: 94px;
   }
 }
 
@@ -886,6 +933,15 @@ header {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .team-section ul {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+}
+
 .team-title {
   margin: 0;
   margin-bottom: 30px;
@@ -897,6 +953,17 @@ header {
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
+}
+
+@media screen and (min-width: 1200px) {
+  .team-title {
+    margin-bottom: 50px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 42px;
+    line-height: 1.17;
+  }
 }
 
 .team-item {
@@ -914,6 +981,13 @@ header {
     -ms-flex-preferred-size: calc(((100%-30px) - 4 * 15px) / 2);
         flex-basis: calc(((100%-30px) - 4 * 15px) / 2);
     margin: 15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team-item {
+    -ms-flex-preferred-size: calc(((100%-30px) - 8 * 15px) / 4);
+        flex-basis: calc(((100%-30px) - 8 * 15px) / 4);
   }
 }
 
@@ -1011,6 +1085,13 @@ header {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .conteiner-client {
+    width: 1200px;
+    padding: 94px 15px;
+  }
+}
+
 .client-title {
   text-align: center;
   margin: 0;
@@ -1018,8 +1099,19 @@ header {
   font-family: Roboto;
   font-style: normal;
   font-weight: bold;
-  font-size: 28;
+  font-size: 28px;
   line-height: 1.17;
+}
+
+@media screen and (min-width: 1200px) {
+  .client-title {
+    margin-bottom: 50px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 42px;
+    line-height: 1.17;
+  }
 }
 
 .client-section ul {
@@ -1031,6 +1123,15 @@ header {
   padding: 0;
   margin: -15px;
   list-style: none;
+}
+
+@media screen and (min-width: 1200px) {
+  .client-section ul {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
 }
 
 .client-item {
@@ -1054,6 +1155,14 @@ header {
   .client-item {
     -ms-flex-preferred-size: calc(((100%-30px) - 6 * 15px) / 3);
         flex-basis: calc(((100%-30px) - 6 * 15px) / 3);
+    margin: 15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .client-item {
+    -ms-flex-preferred-size: calc(((100%-30px) - 12 * 15px) / 6);
+        flex-basis: calc(((100%-30px) - 12 * 15px) / 6);
     margin: 15px;
   }
 }
@@ -1095,6 +1204,18 @@ footer {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .conteiner-footer {
+    width: 1200px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
 .logo-footer {
   display: block;
   margin-bottom: 20px;
@@ -1105,6 +1226,13 @@ footer {
   font-size: 24px;
   line-height: 1.17;
   letter-spacing: 0.03em;
+}
+
+@media screen and (min-width: 1200px) {
+  .logo-footer {
+    font-size: 26px;
+    text-align: left;
+  }
 }
 
 .logo-footer-web {
@@ -1126,6 +1254,12 @@ footer {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .conteiner-logo-join {
+    margin-bottom: 0;
+  }
+}
+
 .conteiner-logo ul {
   list-style: none;
   font-family: Roboto;
@@ -1138,6 +1272,12 @@ footer {
   color: #ffffff;
   padding: 0;
   margin: 0;
+}
+
+@media screen and (min-width: 1200px) {
+  .conteiner-logo ul {
+    text-align: left;
+  }
 }
 
 .address-list {
@@ -1168,6 +1308,13 @@ footer {
   .conteiner-join {
     display: inline-block;
     margin: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .conteiner-join {
+    display: block;
+    margin-left: 69px;
   }
 }
 
@@ -1228,6 +1375,12 @@ footer {
   background-color: #2196f3;
 }
 
+@media screen and (min-width: 1200px) {
+  .conteiner-subscription {
+    width: 570px;
+  }
+}
+
 .conteiner-subscription b {
   display: block;
   margin-bottom: 20px;
@@ -1240,6 +1393,20 @@ footer {
   letter-spacing: 0.03em;
   color: #ffffff;
   text-transform: uppercase;
+}
+
+@media screen and (min-width: 1200px) {
+  .conteiner-subscription b {
+    text-align: left;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .form-subscription {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
 }
 
 .form-subscription input {
@@ -1261,6 +1428,13 @@ footer {
     width: 450px;
     margin-left: auto;
     margin-right: auto;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .form-subscription input {
+    width: 358px;
+    margin-right: 12px;
   }
 }
 
