--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -8,6 +8,9 @@
   @media screen and (min-width: 768px) {
     width: 768px;
   }
+    @media screen and (min-width: 1200px) {
+    width: 1200px;
+  }
 }
 .conteiner-features ul {
   margin: 0;
@@ -18,12 +21,19 @@
     flex-wrap: wrap;
     margin: -15px;
   }
+    @media screen and (min-width: 1200px) {
+      flex-direction: row;
+    }
 }
 .conteiner-features li {
   @media screen and (min-width: 768px) {
     flex-basis: calc(((100%-30px) - 4 * 15px) / 2);
     margin: 15px;
   }
+    @media screen and (min-width: 1200px) {
+    flex-basis: calc(((100%-30px) - 8 * 15px) / 4);
+        margin: 15px;
+    }
 }
 .conteiner-features svg {
   width: 70px;
