--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -11,6 +11,11 @@ footer {
   @media screen and (min-width: 768px) {
     width: 768px;
   }
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+    display: flex;
+    justify-content: space-between;
+  }
 }
 .logo-footer {
   display: block;
@@ -22,6 +27,10 @@ footer {
   font-size: 24px;
   line-height: 1.17;
   letter-spacing: 0.03em;
+  @media screen and (min-width: 1200px) {
+    font-size: 26px;
+    text-align: left;
+  }
 }
 .logo-footer-web {
   color: $activ-color;
@@ -33,12 +42,10 @@ footer {
     align-items: center;
     margin-bottom: 60px;
   }
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 0;
+  }
 }
-// .conteiner-logo {
-//   @media screen and (min-width: 768px) {
-//     display: inline-block;
-//   }
-// }
 .conteiner-logo ul {
   list-style: none;
   @include main-font(normal, 15px, 1.71);
@@ -47,6 +54,9 @@ footer {
   color: #ffffff;
   padding: 0;
   margin: 0;
+  @media screen and (min-width: 1200px) {
+    text-align: left;
+  }
 }
 .address-list {
   font-style: normal;
@@ -70,6 +80,10 @@ footer {
   @media screen and (min-width: 768px) {
     display: inline-block;
     margin: 0;
+  }
+  @media screen and (min-width: 1200px) {
+    display: block;
+    margin-left: 69px;
   }
 }
 .conteiner-join b {
@@ -113,13 +127,11 @@ footer {
 .item-social a:focus {
   background-color: $activ-color;
 }
-// .conteiner-subscription {
-//   margin-left: auto;
-//   margin-right: auto;
-//   @media screen and (min-width: 768px) {
-//     width: 768px;
-//   }
-// }
+.conteiner-subscription {
+  @media screen and (min-width: 1200px) {
+    width: 570px;
+  }
+}
 .conteiner-subscription b {
   display: block;
   margin-bottom: 20px;
@@ -128,10 +140,16 @@ footer {
   letter-spacing: 0.03em;
   color: #ffffff;
   text-transform: uppercase;
+    @media screen and (min-width: 1200px) {
+    text-align: left;
+  }
+
 }
-// .form-subscription {
-//   display: flex;
-// }
+.form-subscription {
+  @media screen and (min-width: 1200px) {
+    display: flex;
+  }
+}
 .form-subscription input {
   display: block;
   width: 100%;
@@ -148,6 +166,11 @@ footer {
     margin-left: auto;
     margin-right: auto;
   }
+    @media screen and (min-width: 1200px) {
+    width: 358px;
+    margin-right: 12px;
+  }
+
 }
 .button-subscription {
   display: block;
