--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -80,23 +80,7 @@
         url(../images/hero-img-1200-2x.jpg);
     }
   }
-  // @media screen and (min-device-pixel-ratio: 2),
-  //   screen and (min-resolution: 192dpi),
-  //   screen and (min-resolution: 2dppx) {
-  //   & {
-  //     background-image: linear-gradient(
-  //         to right,
-  //         rgba(47, 48, 58, 0.8),
-  //         rgba(47, 48, 58, 0.8)
-  //       ),
-  //       url(../images/hero-img-480-2x.jpg);
-  //   }
-  // }
 }
-
-// .conteiner-hero {
-//   padding: 200px 0;
-// }
 .hero-text {
   max-width: 360px;
   // width: 646px;
@@ -104,10 +88,13 @@
   padding: 0;
   color: $text-white-color;
   @include main-font(900, 26px, 1.62);
-  // @include main-font(900, 44px, 1.36);
   letter-spacing: 0.06em;
   text-align: center;
   text-transform: uppercase;
+  @media screen and (min-width: 1200px) {
+    @include main-font(900, 44px, 1.36);
+    max-width: 696px;
+  }
 }
 /*BUTTON-LINK*/
 .order-service {
