--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -10,10 +10,15 @@
   margin-left: auto;
   margin-right: auto;
   @media screen and (min-width: 480px) {
-    width: 480px;
+    max-width: 480px;
   }
   @media screen and (min-width: 768px) {
-    width: 768px;
+    max-width: 768px;
+  }
+  @media screen and (min-width: 1200px) {
+    max-width: 1200px;
+    padding-top: 94px;
+    padding-bottom: 94px;
   }
 }
 .team-section ul {
@@ -25,6 +30,9 @@
     flex-wrap: wrap;
     margin: -15px;
   }
+  @media screen and (min-width: 1200px) {
+    flex-direction: row;
+  }
 }
 .team-title {
   margin: 0;
@@ -33,6 +41,10 @@
   @include main-font(bold, 28px, 1.17);
   text-align: center;
   letter-spacing: 0.03em;
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+    @include main-font(bold, 42px, 1.17);
+  }
 }
 .team-item {
   display: block;
@@ -45,6 +57,9 @@
   @media screen and (min-width: 768px) {
     flex-basis: calc(((100%-30px) - 4 * 15px) / 2);
     margin: 15px;
+  }
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc(((100%-30px) - 8 * 15px) / 4);
   }
 }
 .team-item img {
