--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -34,6 +34,7 @@ header {
   padding-bottom: 60px;
   background-color: $text-white-color;
   border-top: 1px solid #ececec;
+  z-index: 1;
   display: none;
   @media screen and (min-width: 768px) {
     display: flex;
@@ -46,6 +47,7 @@ header {
   @media screen and (min-width: 1200px) {
     flex-direction: row;
     justify-content: space-between;
+    z-index: 0;
   }
   &.is-open {
     display: block;
@@ -171,9 +173,6 @@ header {
     color: $activ-color;
   }
 }
-// .contacts-list li:not(:first-child) {
-//   margin-left: 30px;
-// }
 .icon-mail,
 .icon-phone {
   display: inline-block;
@@ -187,11 +186,12 @@ header {
   margin: 0;
   padding: 0;
   list-style-type: none;
-  @include main-font(500, 12px, 1.17);
+  @include main-font(500, 18px, 1.17);
   letter-spacing: 0.02em;
   @media screen and (min-width: 768px) {
     justify-content: start;
     margin-left: 84px;
+    @include main-font(500, 12px, 1.17);
   }
   @media screen and (min-width: 1200px) {
     flex-direction: row;
