--- a/sass/components/_portfolio-examples.scss
+++ b/sass/components/_portfolio-examples.scss
@@ -8,12 +8,17 @@
   margin-right: auto;
   @media screen and (min-width: 480px) {
     max-width: 480px;
+    padding-bottom: 60px;
   }
   @media screen and (min-width: 768px) {
     max-width: 768px;
+    padding-bottom: 60px;
   }
   @media screen and (min-width: 1200px) {
     max-width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 94px;
   }
 }
 
