--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -62,9 +62,19 @@
     flex-basis: calc(((100%-30px) - 8 * 15px) / 4);
   }
 }
+.image-box {
+  display: block;
+  height: 320px;
+  @media screen and (min-width: 768px) {
+    height: 260px;
+  }
+}
 .team-item img {
   display: block;
-  max-width: 100%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: top;
 }
 .team-item ul {
   display: flex;
