--- a/css/main.css
+++ b/css/main.css
@@ -19,20 +19,9 @@ a {
 }
 
 header {
-  margin-left: auto;
-  margin-right: auto;
-}
-
-@media screen and (min-width: 480px) {
-  header {
-    width: 480px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  header {
-    width: 768px;
-  }
+  position: relative;
+  padding: 10px 0;
+  border-bottom: 1px solid #ececec;
 }
 
 @media screen and (min-width: 1200px) {
@@ -42,8 +31,6 @@ header {
 }
 
 .conteiner-header {
-  position: relative;
-  padding: 10px 15px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -53,14 +40,21 @@ header {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+@media screen and (min-width: 480px) {
+  .conteiner-header {
+    max-width: 480px;
+  }
 }
 
 @media screen and (min-width: 768px) {
   .conteiner-header {
-    position: static;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: start;
+    max-width: 768px;
   }
 }
 
@@ -72,13 +66,12 @@ header {
 
 .navigation {
   position: absolute;
-  top: 100%;
+  top: calc(100% + 1px);
   left: 0;
   width: 100%;
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: #ffffff;
-  border-top: 1px solid #ececec;
   z-index: 1;
   display: none;
 }
@@ -88,10 +81,10 @@ header {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    width: auto;
     position: static;
     top: 0;
     left: 0;
-    border: none;
     padding: 0;
   }
 }
@@ -121,18 +114,6 @@ header {
   font-size: 24px;
   line-height: 1.17;
   white-space: nowrap;
-}
-
-@media screen and (min-width: 768px) {
-  .logo {
-    margin-right: 81px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .logo {
-    margin-right: 85px;
-  }
 }
 
 .logo-web {
@@ -182,6 +163,7 @@ header {
       -ms-flex-align: center;
           align-items: center;
   margin: 0px;
+  margin-bottom: 60px;
   padding: 0px;
   list-style-type: none;
   font-family: Roboto;
@@ -191,12 +173,17 @@ header {
   line-height: 1.17;
 }
 
+.navigation-link li:not(:first-child) {
+  margin-top: 50px;
+}
+
 @media screen and (min-width: 768px) {
   .navigation-link {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
+    margin-bottom: 0;
     font-family: Roboto;
     font-style: normal;
     font-weight: 500;
@@ -204,6 +191,7 @@ header {
     line-height: 1.14;
   }
   .navigation-link li:not(:first-child) {
+    margin: 0;
     margin-left: 50px;
   }
 }
@@ -216,7 +204,6 @@ header {
 .studio-link-activ {
   position: relative;
   display: block;
-  margin-bottom: 50px;
   color: #2196f3;
 }
 
@@ -237,7 +224,7 @@ header {
     margin: 0;
   }
   .studio-link-activ::after {
-    bottom: -24px;
+    bottom: -25px;
   }
 }
 
@@ -249,7 +236,6 @@ header {
 
 .portfolio {
   display: block;
-  margin-bottom: 40px;
   color: #212121;
   -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -263,7 +249,6 @@ header {
 
 .contacts {
   display: block;
-  margin-bottom: 60px;
   color: #212121;
   -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
