--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,8 @@ header {
 
 @media screen and (min-width: 1200px) {
   header {
-    width: 1200px;
+    padding-top: 24px;
+    padding-bottom: 25px;
   }
 }
 
@@ -60,7 +61,7 @@ header {
 
 @media screen and (min-width: 1200px) {
   .conteiner-header {
-    padding: 24px 15px;
+    max-width: 1200px;
   }
 }
 
@@ -73,6 +74,8 @@ header {
   padding-bottom: 60px;
   background-color: #ffffff;
   z-index: 1;
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.16), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 4px 8px rgba(0, 0, 0, 0.04);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.16), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 4px 8px rgba(0, 0, 0, 0.04);
   display: none;
 }
 
@@ -86,19 +89,22 @@ header {
     top: 0;
     left: 0;
     padding: 0;
+    -webkit-box-shadow: none;
+            box-shadow: none;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .navigation {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
-    z-index: 0;
+    margin-left: 85px;
+    padding: 0;
+    width: 100%;
   }
 }
 
@@ -114,6 +120,12 @@ header {
   font-size: 24px;
   line-height: 1.17;
   white-space: nowrap;
+}
+
+@media screen and (min-width: 1200px) {
+  .logo {
+    font-size: 26px;
+  }
 }
 
 .logo-web {
@@ -230,7 +242,7 @@ header {
 
 @media screen and (min-width: 1200px) {
   .studio-link-activ::after {
-    bottom: -30px;
+    bottom: -33px;
   }
 }
 
@@ -321,9 +333,9 @@ header {
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -493,6 +505,7 @@ header {
   padding-left: 15px;
   padding-right: 15px;
   padding-top: 93px;
+  z-index: 1;
   background-color: rgba(0, 0, 0, 0.2);
   -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -754,27 +767,30 @@ header {
   border: none;
 }
 
-.conteiner-features {
+.features-section {
+  display: block;
   padding: 60px 15px;
   margin-left: auto;
   margin-right: auto;
 }
 
 @media screen and (min-width: 480px) {
-  .conteiner-features {
-    width: 480px;
+  .features-section {
+    max-width: 480px;
   }
 }
 
 @media screen and (min-width: 768px) {
-  .conteiner-features {
-    width: 768px;
+  .features-section {
+    max-width: 768px;
   }
 }
 
 @media screen and (min-width: 1200px) {
-  .conteiner-features {
-    width: 1200px;
+  .features-section {
+    max-width: 1200px;
+    padding-top: 94px;
+    padding-bottom: 94px;
   }
 }
 
@@ -801,6 +817,12 @@ header {
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .conteiner-features li:not(:first-child) {
+    margin-top: 30px;
   }
 }
 
@@ -833,16 +855,6 @@ header {
   border-radius: 4px;
 }
 
-.features-section li:not(:first-child) {
-  margin-top: 30px;
-}
-
-@media screen and (min-width: 768px) {
-  .features-section li:not(:first-child) {
-    margin-top: 15px;
-  }
-}
-
 .features-section h2 {
   margin-top: 30px;
   margin-bottom: 10px;
@@ -870,7 +882,6 @@ header {
 
 .activity-section {
   background-color: #ffffff;
-  padding-top: 34px;
   padding-bottom: 94px;
 }
 
@@ -945,14 +956,21 @@ header {
 
 .team-section {
   background-color: #f5f4fa;
-}
-
-.conteiner-team {
-  display: block;
   padding-left: 15px;
   padding-right: 15px;
   padding-top: 60px;
   padding-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .team-section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+
+.conteiner-team {
+  display: block;
   margin-left: auto;
   margin-right: auto;
 }
@@ -972,8 +990,6 @@ header {
 @media screen and (min-width: 1200px) {
   .conteiner-team {
     max-width: 1200px;
-    padding-top: 94px;
-    padding-bottom: 94px;
   }
 }
 
@@ -1033,8 +1049,12 @@ header {
   background-color: #f5f4fa;
   -webkit-box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
           box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
-  margin-top: 30px;
   padding-bottom: 24px;
+  margin: 0;
+}
+
+.team-item:not(:last-child) {
+  margin-bottom: 30px;
 }
 
 @media screen and (min-width: 768px) {
@@ -1042,6 +1062,9 @@ header {
     -ms-flex-preferred-size: calc(((100%-30px) - 4 * 15px) / 2);
         flex-basis: calc(((100%-30px) - 4 * 15px) / 2);
     margin: 15px;
+  }
+  .team-item:not(:last-child) {
+    margin-bottom: 15px;
   }
 }
 
@@ -1144,28 +1167,36 @@ header {
   letter-spacing: 0.03em;
 }
 
-.conteiner-client {
+.client-section {
   padding: 60px 15px;
+}
+
+@media screen and (min-width: 1200px) {
+  .client-section {
+    padding: 94px 15px;
+  }
+}
+
+.conteiner-client {
   margin-left: auto;
   margin-right: auto;
 }
 
 @media screen and (min-width: 480px) {
   .conteiner-client {
-    width: 480px;
+    max-width: 480px;
   }
 }
 
 @media screen and (min-width: 768px) {
   .conteiner-client {
-    width: 768px;
+    max-width: 768px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .conteiner-client {
-    width: 1200px;
-    padding: 94px 15px;
+    max-width: 1200px;
   }
 }
 
