--- a/sass/components/_activity.scss
+++ b/sass/components/_activity.scss
@@ -1,8 +1,8 @@
 .activity-section {
   background-color: $text-white-color;
-  padding-top: 34px;
+  // padding-top: 34px;
   padding-bottom: 94px;
-    @media screen and (max-width: 1199px) {
+  @media screen and (max-width: 1199px) {
     display: none;
   }
 }
