--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,15 +1,19 @@
-.conteiner-features {
+.features-section {
+  display: block;
   padding: 60px 15px;
   margin-left: auto;
   margin-right: auto;
+
   @media screen and (min-width: 480px) {
-    width: 480px;
+    max-width: 480px;
   }
   @media screen and (min-width: 768px) {
-    width: 768px;
+    max-width: 768px;
   }
-    @media screen and (min-width: 1200px) {
-    width: 1200px;
+  @media screen and (min-width: 1200px) {
+    max-width: 1200px;
+    padding-top: 94px;
+    padding-bottom: 94px;
   }
 }
 .conteiner-features ul {
@@ -21,19 +25,24 @@
     flex-wrap: wrap;
     margin: -15px;
   }
-    @media screen and (min-width: 1200px) {
-      flex-direction: row;
-    }
+  @media screen and (min-width: 1200px) {
+    flex-direction: row;
+  }
 }
 .conteiner-features li {
+  @media screen and (max-width: 480px) {
+    &:not(:first-child) {
+      margin-top: 30px;
+    }
+  }
   @media screen and (min-width: 768px) {
     flex-basis: calc(((100%-30px) - 4 * 15px) / 2);
     margin: 15px;
   }
-    @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1200px) {
     flex-basis: calc(((100%-30px) - 8 * 15px) / 4);
-        margin: 15px;
-    }
+    margin: 15px;
+  }
 }
 .conteiner-features svg {
   width: 70px;
@@ -45,12 +54,6 @@
   background-color: #f5f4fa;
   text-align: center;
   border-radius: 4px;
-}
-.features-section li:not(:first-child) {
-  margin-top: 30px;
-  @media screen and (min-width: 768px) {
-    margin-top: 15px;
-  }
 }
 .features-section h2 {
   margin-top: 30px;
