--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -3,7 +3,8 @@ header {
   padding: 10px 0;
   border-bottom: 1px solid #ececec;
   @media screen and (min-width: 1200px) {
-    width: 1200px;
+    padding-top: 24px;
+    padding-bottom: 25px;
   }
 }
 .conteiner-header {
@@ -22,7 +23,7 @@ header {
     max-width: 768px;
   }
   @media screen and (min-width: 1200px) {
-    padding: 24px 15px;
+    max-width: 1200px;
   }
 }
 .navigation {
@@ -34,6 +35,8 @@ header {
   padding-bottom: 60px;
   background-color: $text-white-color;
   z-index: 1;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.16), 0px 2px 4px rgba(0, 0, 0, 0.08),
+    0px 4px 8px rgba(0, 0, 0, 0.04);
   display: none;
   @media screen and (min-width: 768px) {
     display: flex;
@@ -42,11 +45,14 @@ header {
     top: 0;
     left: 0;
     padding: 0;
+    box-shadow: none;
   }
   @media screen and (min-width: 1200px) {
-    flex-direction: row;
+    display: flex;
     justify-content: space-between;
-    z-index: 0;
+    margin-left: 85px;
+    padding: 0;
+    width: 100%;
   }
   &.is-open {
     display: block;
@@ -60,9 +66,8 @@ header {
   font-size: 24px;
   line-height: 1.17;
   white-space: nowrap;
-  @media screen and (min-width: 768px) {
-  }
   @media screen and (min-width: 1200px) {
+    font-size: 26px;
   }
 }
 .logo-web {
@@ -139,7 +144,7 @@ header {
   }
   @media screen and (min-width: 1200px) {
     &::after {
-      bottom: -30px;
+      bottom: -33px;
     }
   }
 }
@@ -191,7 +196,7 @@ header {
   }
   @media screen and (min-width: 1200px) {
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
     margin-left: 0;
     @include main-font(500, 14px, 1.17);
