--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -7,6 +7,7 @@
   padding-left: 15px;
   padding-right: 15px;
   padding-top: 93px;
+  z-index: 1;
   background-color: rgba(0, 0, 0, 0.2);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
