--- a/sass/components/_portfolio-examples.scss
+++ b/sass/components/_portfolio-examples.scss
@@ -1,51 +1,49 @@
 .section-examples-works {
-  border-top: 1px solid #ececec;
-}
-.conteiner-examples {
-  display: block;
   padding: 0 15px;
-  margin-left: auto;
-  margin-right: auto;
-  @media screen and (min-width: 480px) {
-    max-width: 480px;
-    padding-bottom: 60px;
-  }
-  @media screen and (min-width: 768px) {
-    max-width: 768px;
-    padding-bottom: 60px;
-  }
-  @media screen and (min-width: 1200px) {
-    max-width: 1200px;
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-bottom: 94px;
-  }
 }
 
 .conteiner-button {
-  display: block;
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-top: 60px;
-  padding-bottom: 40px;
   margin-left: auto;
   margin-right: auto;
+  padding-top: 60px;
+  padding-bottom: 40px;
   @media screen and (min-width: 480px) {
-    width: 480px;
+    max-width: 480px;
   }
   @media screen and (min-width: 768px) {
-    width: 768px;
+    max-width: 768px;
+    padding-top: 94px;
+    padding-bottom: 50px;
   }
   @media screen and (min-width: 1200px) {
-    width: 1200px;
+    max-width: 1200px;
   }
 }
+.conteiner-examples {
+  margin-left: auto;
+  margin-right: auto;
+  padding-bottom: 60px;
+  @media screen and (min-width: 480px) {
+    max-width: 480px;
+  }
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+    padding-bottom: 94px;
+  }
+  @media screen and (min-width: 1200px) {
+    max-width: 1200px;
+  }
+}
+
 .conteiner-button ul {
   margin: 0;
   padding: 0;
   display: flex;
   flex-wrap: wrap;
   list-style-type: none;
+  @media screen and (min-width: 480px) {
+    margin: -8px;
+  }
   @media screen and (min-width: 768px) {
     justify-content: center;
   }
@@ -57,8 +55,8 @@
 .marketing {
   height: 38px;
   padding: 6px 22px;
-  margin-bottom: 21px;
-  margin-right: 8px;
+  // margin-bottom: 21px;
+  // margin-right: 8px;
   border-radius: 4px;
   border: 1px solid #f5f4fa;
   background: #f5f4fa;
@@ -67,6 +65,9 @@
   text-align: center;
   letter-spacing: 0.03em;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  @media screen and (min-width: 480px) {
+    margin: 8px;
+  }
 }
 .all:hover,
 .all-site:hover,
@@ -91,9 +92,12 @@
     0px 3px 1px rgba(0, 0, 0, 0.1);
 }
 /*PORTFOLIO*/
-.conteiner-examples img {
+.conteiner-examples img{
   display: block;
-  max-width: 100%;
+  width: 100%;
+}
+.conteiner-examples a {
+  color: $text-white-color;
 }
 .image-cart {
   position: relative;
@@ -105,12 +109,10 @@
   top: 0;
   width: 100%;
   height: 100%;
-  padding: 63px 24px;
+  padding: 77px 24px;
   margin: 0;
   transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   background-color: rgba(33, 150, 243, 0.9);
   color: $text-white-color;
   @include main-font(normal, 18px, 1.56);
@@ -120,6 +122,9 @@
   .conteiner-examples li:focus & {
     transform: translateY(0);
     opacity: 1;
+  }
+  @media screen and (min-width: 768px) {
+    padding: 49px 24px;
   }
 }
 .content-cart {
@@ -139,8 +144,6 @@
   }
 }
 .conteiner-examples li {
-  // width: 370px;
-  // outline: 1px solid tomato;
   &:not(:first-child) {
     margin-top: 30px;
   }
@@ -168,9 +171,9 @@
     white-space: nowrap;
   }
 }
-.conteiner-examples p {
-  margin: 0;
-  color: $secondary-text-color;
-  @include main-font(normal, 16px, 1.87);
-  letter-spacing: 0.03em;
-}
+// .conteiner-examples p {
+//   margin: 0;
+//   color: $secondary-text-color;
+//   @include main-font(normal, 16px, 1.87);
+//   letter-spacing: 0.03em;
+// }
