--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,12 +1,16 @@
 .team-section {
   background-color: #f5f4fa;
-}
-.conteiner-team {
-  display: block;
   padding-left: 15px;
   padding-right: 15px;
   padding-top: 60px;
   padding-bottom: 60px;
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+.conteiner-team {
+  display: block;
   margin-left: auto;
   margin-right: auto;
   @media screen and (min-width: 480px) {
@@ -17,8 +21,6 @@
   }
   @media screen and (min-width: 1200px) {
     max-width: 1200px;
-    padding-top: 94px;
-    padding-bottom: 94px;
   }
 }
 .team-section ul {
@@ -52,11 +54,17 @@
   background-color: #f5f4fa;
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 1px 3px rgba(0, 0, 0, 0.12);
-  margin-top: 30px;
   padding-bottom: 24px;
+  margin: 0;
+  &:not(:last-child) {
+    margin-bottom: 30px;
+  }
   @media screen and (min-width: 768px) {
     flex-basis: calc(((100%-30px) - 4 * 15px) / 2);
     margin: 15px;
+    &:not(:last-child) {
+      margin-bottom: 15px;
+    }
   }
   @media screen and (min-width: 1200px) {
     flex-basis: calc(((100%-30px) - 8 * 15px) / 4);
