--- a/css/main.css
+++ b/css/main.css
@@ -393,12 +393,6 @@ header {
   }
 }
 
-@media screen and (min-width: 480px) {
-  .hero-section {
-    width: 480px;
-  }
-}
-
 @media screen and (min-width: 480px) and (min-device-pixel-ratio: 2), screen and (min-width: 480px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 480px) and (min-resolution: 192dpi), screen and (min-width: 480px) and (min-resolution: 2dppx) {
   .hero-section {
     background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url(../images/hero-img-480-2x.jpg);
@@ -410,8 +404,7 @@ header {
   .hero-section {
     background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url(../images/hero-img-768-1x.jpg);
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url(../images/hero-img-768-1x.jpg);
-    width: 768px;
-    background-size: contain;
+    background-size: cover;
   }
 }
 
@@ -506,6 +499,7 @@ header {
   padding-right: 15px;
   padding-top: 93px;
   z-index: 1;
+  overflow-y: scroll;
   background-color: rgba(0, 0, 0, 0.2);
   -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
