--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -54,13 +54,13 @@ a {
     margin: 0;
   }
   .portfolio-activ::after {
-    bottom: -24px;
+    bottom: -25px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .portfolio-activ::after {
-    bottom: -30px;
+    bottom: -31px;
   }
 }
 
@@ -129,12 +129,7 @@ a {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   list-style-type: none;
-}
-
-@media screen and (min-width: 480px) {
-  .conteiner-button ul {
-    margin: -8px;
-  }
+  margin: -8px;
 }
 
 @media screen and (min-width: 768px) {
@@ -165,16 +160,7 @@ a {
   letter-spacing: 0.03em;
   -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-@media screen and (min-width: 480px) {
-  .all,
-  .all-site,
-  .app,
-  .design,
-  .marketing {
-    margin: 8px;
-  }
+  margin: 8px;
 }
 
 .all:hover,
@@ -205,6 +191,11 @@ a {
 .conteiner-examples img {
   display: block;
   width: 100%;
+  height: 294px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: top;
+     object-position: top;
 }
 
 .conteiner-examples a {
@@ -316,5 +307,16 @@ a {
   .conteiner-examples h2 {
     white-space: nowrap;
   }
+}
+
+.content-cart p {
+  margin: 0;
+  color: #757575;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.03em;
 }
 /*# sourceMappingURL=portfolio.css.map */
