--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -26,7 +26,7 @@
   }
 
   @media screen and (min-width: 480px) {
-    width: 480px;
+    // width: 480px;
     @media screen and (min-device-pixel-ratio: 2),
       screen and (min-resolution: 192dpi),
       screen and (min-resolution: 2dppx) {
@@ -45,8 +45,8 @@
         rgba(47, 48, 58, 0.8)
       ),
       url(../images/hero-img-768-1x.jpg);
-    width: 768px;
-    background-size: contain;
+    // width: 768px;
+    background-size: cover;
     @media screen and (min-device-pixel-ratio: 2),
       screen and (min-resolution: 192dpi),
       screen and (min-resolution: 2dppx) {
@@ -83,7 +83,6 @@
 }
 .hero-text {
   max-width: 360px;
-  // width: 646px;
   margin: 0 auto;
   padding: 0;
   color: $text-white-color;
@@ -107,7 +106,6 @@
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 0;
-  // text-align: center;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   color: $text-white-color;
   background-color: $activ-color;
