--- a/sass/components/_portfolio-examples.scss
+++ b/sass/components/_portfolio-examples.scss
@@ -1,33 +1,34 @@
 .section-examples-works {
-  padding: 0 15px;
+  padding: 60px 15px;
+  @media screen and (min-width: 768px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 .conteiner-button {
   margin-left: auto;
   margin-right: auto;
-  padding-top: 60px;
-  padding-bottom: 40px;
+  margin-bottom: 40px;
   @media screen and (min-width: 480px) {
     max-width: 480px;
   }
   @media screen and (min-width: 768px) {
     max-width: 768px;
-    padding-top: 94px;
-    padding-bottom: 50px;
+    margin-bottom: 30px;
   }
   @media screen and (min-width: 1200px) {
     max-width: 1200px;
+    margin-bottom: 50px;
   }
 }
 .conteiner-examples {
   margin-left: auto;
   margin-right: auto;
-  padding-bottom: 60px;
   @media screen and (min-width: 480px) {
     max-width: 480px;
   }
   @media screen and (min-width: 768px) {
     max-width: 768px;
-    padding-bottom: 94px;
   }
   @media screen and (min-width: 1200px) {
     max-width: 1200px;
@@ -40,10 +41,13 @@
   display: flex;
   flex-wrap: wrap;
   list-style-type: none;
-    margin: -8px;
+  margin: -4px;
   @media screen and (min-width: 768px) {
     justify-content: center;
   }
+}
+.conteiner-button li {
+  margin: 4px;
 }
 .all,
 .all-site,
@@ -52,8 +56,6 @@
 .marketing {
   height: 38px;
   padding: 6px 22px;
-  // margin-bottom: 21px;
-  // margin-right: 8px;
   border-radius: 4px;
   border: 1px solid #f5f4fa;
   background: #f5f4fa;
@@ -62,7 +64,6 @@
   text-align: center;
   letter-spacing: 0.03em;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    margin: 8px;
 }
 .all:hover,
 .all-site:hover,
@@ -87,7 +88,7 @@
     0px 3px 1px rgba(0, 0, 0, 0.1);
 }
 /*PORTFOLIO*/
-.conteiner-examples img{
+.conteiner-examples img {
   display: block;
   width: 100%;
   height: 294px;
